--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-dropdown-menu": "2.1.4",
+    "@radix-ui/react-select": "2.1.4",
+    "@radix-ui/react-popover": "1.1.4",
+    "@radix-ui/react-dialog": "1.1.4",
     "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-toast": "^1.2.6",
@@ -40,6 +41,9 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "zustand": "^5.0.3"
+  },
+  "overrides": {
+    "@radix-ui/react-dismissable-layer": "1.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
