--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "2.1.4",
-    "@radix-ui/react-select": "2.1.4",
-    "@radix-ui/react-popover": "1.1.4",
     "@radix-ui/react-dialog": "1.1.4",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "2.1.4",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "1.1.4",
+    "@radix-ui/react-select": "2.1.4",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/supabase-js": "^2.53.0",
     "@tailwindcss/vite": "^4.0.4",
     "@tanstack/react-query": "^5.67.2",
     "@tanstack/react-query-devtools": "^5.67.2",
@@ -33,13 +36,16 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.60.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
     "sonner": "^1.7.4",
     "swiper": "^11.2.4",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss": "^4.0.4",
+    "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
+    "zod": "^3.25.75",
     "zustand": "^5.0.3"
   },
   "overrides": {
@@ -57,11 +63,13 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "sharp": "^0.34.2",
     "svgo": "^3.3.2",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0",
-    "vite-plugin-image-optimizer": "^1.1.8"
+    "vite-plugin-image-optimizer": "^1.1.8",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
