--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -9,3 +9,14 @@ entrypoint = "./functions/custom-username-login/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/custom-username-login/*.html" ]
+
+[functions.check-duplicates]
+enabled = true
+verify_jwt = true
+import_map = "./functions/check-duplicates/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/check-duplicates/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/check-duplicates/*.html" ]
