--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "clsx": "^2.1.1",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.542.0",
-    "next": "15.5.7",
+    "next": "15.5.9",
     "next-themes": "^0.4.6",
-    "react": "19.1.2",
-    "react-dom": "19.1.2",
+    "react": "19.1.4",
+    "react-dom": "19.1.4",
     "react-hook-form": "^7.62.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -45,14 +45,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@next/eslint-plugin-next": "^15.5.2",
+    "@next/eslint-plugin-next": "^15.5.9",
     "@tailwindcss/postcss": "^4",
     "@tanstack/eslint-plugin-query": "^5.83.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.7",
+    "eslint-config-next": "^15.5.9",
     "eslint-plugin-react-hooks": "^5.2.0",
     "msw": "^2.11.1",
     "prettier": "^3.6.2",
