--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@tanstack/react-query-devtools": "^5.85.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.542.0",
     "next": "15.5.9",
     "next-themes": "^0.4.6",
     "react": "19.1.4",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.1.4",
     "react-hook-form": "^7.62.0",
     "sonner": "^2.0.7",
